crates/azalea-core/src/parse/snapshots/azalea_core__parse__parser_tests__invalid_identifier.snap
---
source: crates/azalea-core/src/parse/parser_tests.rs
expression: output
---
SOURCE:
$florbble

ERROR:
  2 | $florbble
Error: Expected an expression
