crates/azalea-core/src/parse/snapshots/azalea_core__parse__parser_tests__parse_array.snap
---
source: crates/azalea-core/src/parse/parser_tests.rs
expression: output
---
SOURCE:
[1, 2, 3]

EXPRESSION:
Span {
    target: Array {
        elements: [
            Span {
                target: Literal(
                    Int(
                        1,
                    ),
                ),
                loc: SourceLoc {
                    line: 1,
                    start: 1,
                    end: 2,
                },
            },
            Span {
                target: Literal(
                    Int(
                        2,
                    ),
                ),
                loc: SourceLoc {
                    line: 1,
                    start: 4,
                    end: 5,
                },
            },
            Span {
                target: Literal(
                    Int(
                        3,
                    ),
                ),
                loc: SourceLoc {
                    line: 1,
                    start: 7,
                    end: 8,
                },
            },
        ],
    },
    loc: SourceLoc {
        line: 1,
        start: 0,
        end: 1,
    },
}
