crates/azalea-core/src/parse/snapshots/azalea_core__parse__parser_tests__parse_if_expr.snap
---
source: crates/azalea-core/src/parse/parser_tests.rs
expression: output
---
SOURCE:
if 1 == 1 then 42 end

EXPRESSION:
Span {
    target: If {
        cond: Span {
            target: BinOp(
                Span {
                    target: Literal(
                        Int(
                            1,
                        ),
                    ),
                    loc: SourceLoc {
                        line: 1,
                        start: 3,
                        end: 4,
                    },
                },
                DoubleEq,
                Span {
                    target: Literal(
                        Int(
                            1,
                        ),
                    ),
                    loc: SourceLoc {
                        line: 1,
                        start: 8,
                        end: 9,
                    },
                },
            ),
            loc: SourceLoc {
                line: 1,
                start: 3,
                end: 4,
            },
        },
        then: [
            Span {
                target: Expr(
                    Span {
                        target: Literal(
                            Int(
                                42,
                            ),
                        ),
                        loc: SourceLoc {
                            line: 1,
                            start: 15,
                            end: 17,
                        },
                    },
                ),
                loc: SourceLoc {
                    line: 1,
                    start: 0,
                    end: 2,
                },
            },
        ],
        else_: None,
    },
    loc: SourceLoc {
        line: 1,
        start: 0,
        end: 2,
    },
}
