crates/azalea-core/src/parse/snapshots/azalea_core__parse__parser_tests__parse_lambda.snap
---
source: crates/azalea-core/src/parse/parser_tests.rs
expression: "format!(\"{:#?}\", lambda_expr)"
---
Lam {
    args: [
        (
            "x",
            Int,
        ),
    ],
    return_ty: Int,
    body: Span {
        target: Literal(
            Int(
                42,
            ),
        ),
        loc: SourceLoc {
            line: 1,
            start: 0,
            end: 0,
        },
    },
}
