crates/azalea-core/src/parse/snapshots/azalea_core__parse__parser_tests__parse_lambda_expr.snap
---
source: crates/azalea-core/src/parse/parser_tests.rs
expression: output
---
SOURCE:
\(x) -> x + 1

EXPRESSION:
Span {
    target: Lam {
        args: [
            (
                "x",
                Unresolved,
            ),
        ],
        return_ty: Unresolved,
        body: Span {
            target: BinOp(
                Span {
                    target: Ident(
                        "x",
                    ),
                    loc: SourceLoc {
                        line: 1,
                        start: 8,
                        end: 9,
                    },
                },
                Add,
                Span {
                    target: Literal(
                        Int(
                            1,
                        ),
                    ),
                    loc: SourceLoc {
                        line: 1,
                        start: 12,
                        end: 13,
                    },
                },
            ),
            loc: SourceLoc {
                line: 1,
                start: 8,
                end: 9,
            },
        },
    },
    loc: SourceLoc {
        line: 1,
        start: 0,
        end: 1,
    },
}
