crates/azalea-core/src/parse/snapshots/azalea_core__parse__parser_tests__parse_literal-2.snap
---
source: crates/azalea-core/src/parse/parser_tests.rs
expression: output
---
SOURCE:
0x123

EXPRESSION:
Span {
    target: Literal(
        Int(
            291,
        ),
    ),
    loc: SourceLoc {
        line: 1,
        start: 0,
        end: 5,
    },
}
