crates/azalea-core/src/parse/snapshots/azalea_core__parse__parser_tests__parse_literal-3.snap
---
source: crates/azalea-core/src/parse/parser_tests.rs
expression: output
---
SOURCE:
3.14

EXPRESSION:
Span {
    target: Literal(
        Float(
            3.14,
        ),
    ),
    loc: SourceLoc {
        line: 1,
        start: 0,
        end: 4,
    },
}
