crates/azalea-core/src/parse/snapshots/azalea_core__parse__parser_tests__parse_literal-4.snap
---
source: crates/azalea-core/src/parse/parser_tests.rs
expression: output
---
SOURCE:
"Hello, world!"

EXPRESSION:
Span {
    target: Literal(
        String(
            "\"Hello, world!\"",
        ),
    ),
    loc: SourceLoc {
        line: 1,
        start: 0,
        end: 15,
    },
}
