crates/azalea-core/src/parse/snapshots/azalea_core__parse__parser_tests__parse_literal.snap
---
source: crates/azalea-core/src/parse/parser_tests.rs
expression: "format!(\"{:#?}\", span)"
---
Span {
    target: Int(
        42,
    ),
    loc: SourceLoc {
        line: 1,
        start: 0,
        end: 0,
    },
}
