crates/azalea-core/src/parse/snapshots/azalea_core__parse__parser_tests__parse_unary_expr.snap
---
source: crates/azalea-core/src/parse/parser_tests.rs
expression: output
---
SOURCE:
!42

EXPRESSION:
Span {
    target: UnOp(
        Not,
        Span {
            target: Literal(
                Int(
                    42,
                ),
            ),
            loc: SourceLoc {
                line: 1,
                start: 1,
                end: 3,
            },
        },
    ),
    loc: SourceLoc {
        line: 1,
        start: 0,
        end: 1,
    },
}
